--- a/package.json
+++ b/package.json
@@ -4,18 +4,10 @@
   "description": "",
   "main": "lib/index.js",
   "scripts": {
-    "watch": "npm run watch:lib & npm run watch:example",
-    "watch:lib": "watchify --extension=js -o lib/index.js src/index.js",
-    "watch:example": "watchify --extension=js -o example/dist/bundle.js example/src/index.js",
-    "build": "npm run build:lib & npm run build:example",
-    "build:lib": "browserify --extension=js -o lib/index.js src/index.js",
-    "build:example": "browserify --extension=js -o example/dist/bundle.js example/src/index.js",
+    "watch": "watchify --extension=js -o example/dist/bundle.js example/src/index.js",
+    "build": "browserify --extension=js -o example/dist/bundle.js example/src/index.js",
     "test": "karma start",
-    "test:watch": "karma start --auto-watch --no-single-run",
-    "compile": "babel -d lib/ src/",
-    "prepublish": "npm run compile",
-    "prepush": "npm run lint",
-    "lint": "eslint src"
+    "test:watch": "karma start --auto-watch --no-single-run"
   },
   "repository": {
     "type": "git",
@@ -71,5 +63,9 @@
   },
   "files": [
     "lib"
-  ]
+  ],
+  "dependencies": {
+    "highcharts": "^4.2.3",
+    "react-highcharts": "^7.0.0"
+  }
 }
